# tunstall_manager

./: .gitignore  README.md
launch/: empty.launch  test.launch
src/face_recognizer/: CMakeLists.txt  package.xml
src/face_recognizer/data/train_output/: embeddings.pickle  le.pickle  recognizer.pickle
src/face_recognizer/launch/: test_face_detection.launch  test_face_recognition.launch
src/face_recognizer/rviz/: config_file.rviz
src/face_recognizer/src/: Detect_faces_node.py  Face_recognition_node.py  Train_face_recognition_model.py  face_detection_node.py  face_recognition_node.py  recognize_node.py  workspace.code-workspace
src/face_recognizer/src/scripts/: Detect_faces_node.py  Embedding_extractor.py  create_a_path.py  detect_faces_video.py  embedding_extractor.py  face_aligner.py  recognize.py  rename_files.py  train_face_recognition_model.py
src/management/pi_trees_gui/: CMakeLists.txt  package.xml  setup.py
src/management/pi_trees_gui/src/pi_trees_gui/: pi_trees_gui.py
src/management/pi_trees_lib/src/pi_trees_lib/: pi_trees_lib.py
src/management/pi_trees_ros/src/pi_trees_ros/: pi_trees_ros.py
src/management/task_coordinator/: CMakeLists.txt  package.xml  readme.md
src/management/task_coordinator/include/task_coordinator/: task_coordinator_node.h
src/management/task_coordinator/launch/: task_coordinator_example.launch
src/management/task_coordinator/src/: task_coordinator_node.cpp
src/management/task_manager/: CMakeLists.txt  package.xml  readme.md
src/management/task_manager/scripts/: bt_manager.py  bt_task_lib.py  bt_viewer.py
src/management/task_manager/srv/: addTask.srv  evaluateTask.srv  removeTask.srv
src/management_aux/: task_management.cpp
src/missions_pkg/: readme.mb
src/missions_pkg/launch/: amcl_diff.launch  costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  giraff_gmapping.launch  giraff_ros_driver.launch  giraff_urdf.launch  main.launch  map_server.launch  move_base.launch  multi_astra_test.launch  planner_common_params.yaml  planner_global_params.yaml  planner_local_params.yaml  rgbd_to_laser.launch  task_coordinator.launch  tfg_min.launch  tunstall_manager.launch  usb_cam.launch
src/missions_pkg/maps/: map4.pgm  map4.yaml  mapir_topo_map.json  mapir_topo_map_bck.json  mapir_topo_map_bck2.json  mapir_topo_map_tunstall.json
src/missions_pkg/rviz/: simbot_patrol.rviz
src/missions_pkg/urdf_models/: giraff (copy 1).urdf  giraff.urdf
src/tunstall_manager/: CMakeLists.txt  package.xml
src/tunstall_manager/data/: face_detect_command.json  move_command.json  msg_json_example.json  sensorFile (copy).json  sensorFile.json  speak_command.json  wait_command.json
src/tunstall_manager/launch/: test_tunstall_manager.launch
src/tunstall_manager/src/: tunstall_manager_node.py
src/tunstall_manager/srv/: command_delete_file.srv  command_save_file.srv
